# template-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: deploy-doxygen.yml  gitleaks.yml
apps/cli/: CMakeLists.txt
apps/cli/include/Cli/: Cli.hpp
apps/cli/src/: main.cpp
cmake/config/: Version.hpp.in
cmake/modules/: FetchSpdlog.cmake  fetchDoxygen.cmake  fetchGoogleTest.cmake  fetchNlohmannJson.cmake  makeClangFormat.cmake  makeClangTidy.cmake  makeCompileDefinitions.cmake  makeCompileOptions.cmake  makeDoc.cmake  makeVersion.cmake
modules/core/: CMakeLists.txt
modules/core/include/Core/: Core.hpp
modules/core/src/: core.cpp
scripts/unix/: build.sh
scripts/unix/linux/: install-cmake.sh  install-gitleaks.sh  install-vulkansdk.sh
scripts/windows/: install-vulkansdk.ps1
tests/: CMakeLists.txt
tests/src/: oneEqualsOne.cpp
